fixed flex wrap safari problem

--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -145,7 +145,7 @@ img {
 .course-stats {
   padding-left: 0px;
   padding-right: 5px;
-  @include flex(1);
+  @include flex(1 49%);
   min-width: 49%;
 }
 
@@ -202,10 +202,10 @@ img {
   // margin-right: 0px;
   // margin-left: 0px;
   @include flexbox();
-  flex-wrap: wrap;
   -webkit-flex-wrap: wrap;
-  justify-content: space-between;
+  flex-wrap: wrap;
   -webkit-justify-content: space-between;
+  justify-content: space-between;
 
 }
 
@@ -220,11 +220,6 @@ img {
   box-shadow: 0px 1px 2px 0px #B8B8B8;
 }
 
-.course-grades-container {
-  padding-left: 0px;
-  padding-right: 5px;
-}
-
 .course-grades {
   // margin-left:5px;
   height: 390px;
@@ -234,7 +229,7 @@ img {
   // border: 1px solid #979797;
   box-shadow: 0px 1px 2px 0px #B8B8B8;
   // width: 49.0%
-  @include flex(1);
+  @include flex(1 49%);
   min-width: 49%;
 }
 
@@ -665,6 +660,7 @@ p {
   }
   .course-grades, .course-stats {
     min-width: 100%;
+    @include flex(1 100%);
     margin-right: 0px;
     padding-left: 0px;
     padding-right: 0px;
